set up the project

--- a/assets/project/S23/rubric.tex
+++ b/assets/project/S23/rubric.tex
@@ -62,33 +62,31 @@ keepaspectratio=true]{#1.eps}}
 
 
 \begin{document}
-\scriptsize \phantom{bob} \vspace{-0.3in}
-\noindent Math 615 Numerical Analysis of DEs; \today \hfill \Large Name:\underline{\phantom{DLFJD SFLKJSD sdfa}}
+\scriptsize
+\noindent Math 615 NADE; \today \hfill \Large Name:\underline{\phantom{DLFJD SFLKJSD sdfa}}
 
 \thispagestyle{empty}
 \bigskip
 
-\Large\centerline{\textbf{Project Evaluation}}
+\Large\centerline{\textbf{Proposal or Project Evaluation}}
 \normalsize\normalspacing
 
 \bigskip
 
 \begin{quote}
-As announced, Version 1.0 is 5\% and Version 2.0 is 10\% of your course grade.
+The Proposal is 5\% and the completed Project is 15\% of your course grade.
 \end{quote}
-
-\vspace{0.3in}
 
 \noindent\rule{\textwidth}{0.7mm}
 \bigskip
 
-\large\centerline{\textbf{VERSION 1.0}}
+\large\centerline{\textbf{PROPOSAL (WITH FEEDBACK)}}
 \bigskip
 
-\noindent \underline{5 points: format (\emph{5 to 10 pages, required section headings, 3 references})}
+\noindent \underline{5 points: format (\emph{4 to 8 pages, required section headings, 4 references})}
 \vfill
 
-\noindent \underline{5 points: coverage (\emph{drafted the major parts: intro of problem, num.~analysis, computation})}
+\noindent \underline{5 points: coverage (\emph{drafted major parts: introduction, mathematical analysis, computation})}
 \vfill
 
 \noindent \underline{5 points: correctness/reasonableness of plan}
@@ -102,7 +100,7 @@ As announced, Version 1.0 is 5\% and Version 2.0 is 10\% of your course grade.
 \newpage
 
 
-\large\centerline{\textbf{SUGGESTIONS FOR V2.0}}
+\large\centerline{\textbf{FURTHER SUGGESTIONS BASED ON PROPOSAL}}
 \bigskip
 
 \vspace{3.0in}
@@ -110,19 +108,19 @@ As announced, Version 1.0 is 5\% and Version 2.0 is 10\% of your course grade.
 \noindent\rule{\textwidth}{0.7mm}
 \bigskip
 
-\large\centerline{\textbf{VERSION 2.0}}
+\large\centerline{\textbf{COMPLETED PROJECT}}
 \bigskip
 
-\noindent \underline{15 points: correctness and quality of numerical analysis}
+\noindent \underline{20 points: adequacy, correctness, and quality of mathematical/numerical analysis}
 \vfill
 
-\noindent \underline{15 points: correctness and quality of practical computation}
+\noindent \underline{20 points: adequacy, correctness, and quality of practical computation}
 \vfill
 
-\noindent \underline{10 points: everything else (\emph{esp.~exposition of context, format})}
+\noindent \underline{20 points: exposition/writing, figure quality, organization and readability}
 \vfill
 
-\hfill TOTAL = \phantom{foo bar} / 40
+\hfill TOTAL = \phantom{foo bar} / 60
 
 \end{document}
 
