--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 8: \today} \normalsize
+\hfill \small \emph{version 9: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -83,7 +83,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{11}{3/27}{3/31}    & 6.3, 6.4 \par \proj{Project: announced} & 7.1, 7.2, 7.3 \par \hdue{A6} & 7.4 \par \dl{withdrawals} \\ \hline
 
-\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
+\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \hdue{A7} \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
 
 \wkday{13}{4/10}{4/14}    & 9.1, 9.2 & 9.3, 9.4 & 9.5 \\ \hline
 
