--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -83,9 +83,9 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{11}{3/27}{3/31}    & 6.3, 6.4 \par \proj{Project: announced} & 7.1, 7.2, 7.3 \par \hdue{A6} & 7.4 \par \dl{withdrawals} \\ \hline
 
-\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \hdue{A7} \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
+\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
 
-\wkday{13}{4/10}{4/14}    & 9.1, 9.2 & 9.3, 9.4 & 9.5 \\ \hline
+\wkday{13}{4/10}{4/14}    & 9.1, 9.2 \par \hdue{A7} & 9.3, 9.4 & 9.5 \\ \hline
 
 \wkday{14}{4/17}{4/21}    & 10.1, 10.2 & 10.3, 10.4 & 10.5 \\ \hline
 
