--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 9: \today} \normalsize
+\hfill \small \emph{version 10: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -87,7 +87,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{13}{4/10}{4/14}    & 9.1, 9.2 \par \hdue{A7} & 9.3, 9.4 & 9.5 \\ \hline
 
-\wkday{14}{4/17}{4/21}    & 10.1, 10.2 & 10.3, 10.4 & 10.5 \\ \hline
+\wkday{14}{4/17}{4/21}    & 10.1, 10.2 & 10.3, 10.4 \par \hdue{A8} & 10.5 \\ \hline
 
 \wkday{15}{4/24}{4/28}    & 10.7 & & \\ \hline
 
